--- a/ShopFilip/Views/Shared/_Layout.cshtml
+++ b/ShopFilip/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ShopFilip.IdentityModels
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Identity
+@using ShopFilip.Helpers
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
@@ -22,6 +23,7 @@
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
     </environment>
     <link rel="stylesheet" href="~/css/MainPage.css" />
+    <link rel='shortcut icon' type='image/x-icon' href="~/favicon.ico" />
     @RenderSection("CssLinks", required: false)
 </head>
 <body>
@@ -37,17 +39,17 @@
                         <li class="nav-item dropdown dropdownMan man">
                             <a class="nav-link text-dark dropdown-toggle comboboxMan" id="aa" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Man 👨</a>
                             <div class="dropdown-menu ManMenu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="MenMainPAge" asp-route-id="Koszule">Koszule</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="MenMainPAge" asp-route-id="Spodnie">Spodnie</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="MenMainPAge" asp-route-id="Kurtki">Kurtki</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="MenMainPAge" asp-route-id="@Group.Koszule">@Group.Koszule.ToString()</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="MenMainPAge" asp-route-id="@Group.Spodnie">@Group.Spodnie.ToString()</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="MenMainPAge" asp-route-id="@Group.Kurtki">@Group.Kurtki.ToString()</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown dropdownWoman woman">
                             <a class="nav-link text-dark dropdown-toggle comboboxWoman" id="aa" data-toggle="dropdowno" aria-haspopup="true" aria-expanded="false">Woman 👩</a>
                             <div class="dropdown-menu WomanMenu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="WomanMainPage" asp-route-id="Koszule">Koszule</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="WomanMainPage" asp-route-id="Spodnie">Spodnie</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="WomanMainPage" asp-route-id="Kurtki">Kurtki</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="WomanMainPage" asp-route-id="@Group.Koszule">@Group.Koszule.ToString()</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="WomanMainPage" asp-route-id="@Group.Spodnie">@Group.Spodnie.ToString()</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="WomanMainPage" asp-route-id="@Group.Kurtki">@Group.Kurtki.ToString()</a>
                             </div>
                         </li>
                     </ul>
