--- a/ShopFilip/Views/Shared/_Layout_Dashboard.cshtml
+++ b/ShopFilip/Views/Shared/_Layout_Dashboard.cshtml
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/dashboard/">
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel='shortcut icon' type='image/x-icon' href="~/favicon.ico" />
 </head>
 <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
