clean code and change naming

--- a/ShopFilip/Views/Shared/_Layout.cshtml
+++ b/ShopFilip/Views/Shared/_Layout.cshtml
@@ -111,7 +111,7 @@
             $('.woman').hover(
                 function () {
                     $(".WomanMenu").addClass('show')
-                    $(".comboboxWoman").addClass('bb')
+                    $(".comboboxWoman").addClass('color-combobox ')
                     $(".comboboxWoman").removeClass('text-dark')
                     $(".comboboxWoman").addClass('text-white')
                 },
@@ -121,15 +121,14 @@
                 function () {
                     $(".WomanMenu ").removeClass('show')
                     $(".comboboxWoman").addClass('text-dark')
-                    $(".comboboxWoman").removeClass('bb')
+                    $(".comboboxWoman").removeClass('color-combobox ')
                 },
             )
-
 
             $('.man').hover(
                 function () {
                     $(".ManMenu").addClass('show')
-                    $(".comboboxMan").addClass('bb')
+                    $(".comboboxMan").addClass('color-combobox ')
                     $(".comboboxMan").removeClass('text-dark')
                     $(".comboboxMan").addClass('text-white')
                 },
@@ -138,7 +137,7 @@
                 function () {
                     $(".ManMenu").removeClass('show')
                     $(".comboboxMan").addClass('text-dark')
-                    $(".comboboxMan").removeClass('bb')
+                    $(".comboboxMan").removeClass('color-combobox ')
                 },
             )
         </script>
