--- a/ShopFilip/wwwroot/css/MainPage.css
+++ b/ShopFilip/wwwroot/css/MainPage.css
@@ -1,11 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
-body {
-    font-family: 'Montserrat', sans-serif;
-}
-
-#products {
+﻿#products {
     display: flex;
     flex-wrap:wrap;
 }
@@ -230,8 +223,7 @@ dropdownWoman:hover {
     color: white;
 }
 
-
-.bb {
+.color-combobox {
     background-color: #434444;
     color: white;
 }
